# const_trait_impl

./: Cargo.toml  DEV-README.md  README.md
src/: from.rs  lib.rs
src/parse/: item.rs  local.rs  mod.rs
src/to_tokens/: filter_attrs.rs  mod.rs
