[package]
name = "const_trait_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = ["full"] }
quote = { version = "1.0.15" }

[lib]
proc-macro = true