[package]
name = "unconst_trait_impl"
version = "0.1.3"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Function-like macro that \"unconsts\" trait implementations"
documentation = "https://docs.rs/unconst_trait_impl"
readme = "README.md"
repository = "https://github.com/JohnScience/unconst_trait_impl"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["const", "macro", "trait", "impl"]
categories = ["rust-patterns"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/lib.rs",
    "/tests/**",
]
autobins = false
autoexamples = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = ["full"] }
quote = { version = "1.0.15" }

[lib]
proc-macro = true